--- a/week 5.html
+++ b/week 5.html
@@ -1,16 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title> What i thought was useful to show in the metadata </title>
-</head>
 
-<body>
-<h2> artist </h2>
-<h2> song name </h2>
-<h2> encoder </h2>
-<h2> release date </h2>
+What i thought was useful to show in the metadata 
 
-<h1> <b> example </b> <h1>
+artist 
+song name
+encoder 
+release date
+
+my example;
+
 <title xml:id="someone you loved">week 5 notation</title>
                 <respStmt>
                     <persName xml:id="Lewis Capaldi" role"composer" authURI="https://www.wikidata.org/wiki/Q42315001" authority="wikidata">Lewis Capaldi</persName>
@@ -30,4 +27,4 @@
                <name xml:id="name-0000001268119418">Verovio</name>
                <p xml:id="p-0000000637343105">Transcoded from MusicXML</p>
 
-</html>
+
