--- a/week 7.html
+++ b/week 7.html
@@ -1,4 +1,4 @@
-If youlook at the code you can see that i have attemped 
+If you look at the code you can see that i have attemped to make thus work, however i simply could not fix this weeks code no matter how much i tried.
 
 
 
